set(tokuft_kernel_srcs
test-ubi-root-chkpt
test3856
test3681
test-inc-split
is_empty
make-tree
test-assert
le-cursor-provdel
bnc-insert-benchmark
test-oldest-referenced-xid-flush
cachetable-cleaner-checkpoint2
cachetable-checkpoint-prefetched-nodes
cachetable-checkpoint-pinned-nodes
cachetable-pin-nonblocking-checkpoint-clean
#orthopush-flush
recovery-cbegin
recovery-no-log
recovery-no-datadir
recovery-cbegin-cend-hello
recovery-cbegin-cend
recovery-cend-cbegin
msnfilter
omt-test
recovery-empty
verify-unsorted-leaf
verify-bad-msn
verify-bad-pivots
recovery-hello
recovery-lsn-error-during-forward-scan
fifo-test
x1764-test
xid_lsn_independent
verify-unsorted-pivots
verify-misrouted-msgs
shortcut
keyrange
keytest
#pqueue-test
comparator-test
recovery-datadir-is-file
test-txn-child-manager
verify-dup-pivots
test-checkpoint-during-split
verify-dup-in-leaf
cachetable-prefetch-maybegetandpin-test
cachetable-prefetch-getandpin-test
cachetable-pin-checkpoint
cachetable-simple-read-pin-nonblocking
cachetable-simple-unpin-remove-checkpoint
cachetable-simple-maybe-get-pin
cachetable-simple-put-dep-nodes
cachetable-simple-pin-dep-nodes
cachetable-clock-eviction
cachetable-clock-eviction2
cachetable-clock-eviction3
cachetable-clock-eviction4
cachetable-eviction-close-test
cachetable-eviction-close-test2
cachetable-eviction-getandpin-test
cachetable-eviction-getandpin-test2
cachetable-simple-read-pin
cachetable-prefetch-close-test
cachetable-simple-verify
cachetable-fd-test
cachetable-4357
cachetable-4365
cachetable-5978
cachetable-5978-2
cachetable-debug-test
cachetable-put-test
cachetable-put-checkpoint
cachetable-cleaner-thread-attrs-accumulate
cachetable-cleaner-thread-empty-cachetable
cachetable-flush-during-cleaner
cachetable-clone-unpin-remove
cachetable-simple-pin-nonblocking
cachetable-simple-pin-nonblocking-cheap
cachetable-simple-close
cachetable-simple-pin
cachetable-simple-clone
cachetable-simple-pin-cheap
cachetable-cleaner-thread-simple
cachetable-simple-clone2
cachetable-writer-thread-limit
cachetable-getandpin-test
cachetable-evictor-class
cachetable-checkpoint-test
cachetable-unpin-rm-and-checkpoint
cachetable-count-pinned-test
cachetable-checkpointer-class
cachetable-prefetch-flowcontrol-test
cachetable-rwlock-test
cachetable-clone-partial-fetch
cachetable-5097
cachetable-all-write
cachetable-clone-checkpoint
cachetable-flush-test
cachetable-partial-fetch
cachetable-prefetch-checkpoint-test
cachetable-cleaner-thread-same-fullhash
cachetable-unpin-and-remove-test
cachetable-unpin-test
cachetable-cleaner-thread-nothing-needs-flushing
cachetable-clone-pin-nonblocking
compress-test
ft-test0
ft-test1
ft-test2
ft-test3
ft-test4
ft-test5
ft-test
ft-clock-test
log-test
log-test2
log-test3
log-test5
log-test6
log-test7
log-test4
queue-test
logcursor-bw
logcursor-fw
logcursor-print
logcursor-timestamp
logcursor-empty-logdir
logcursor-empty-logfile
logcursor-empty-logfile-2
logcursor-empty-logfile-3
logcursor-bad-checksum
logfilemgr-print
logfilemgr-create-destroy
log-test-maybe-trim
minicron-test
benchmark-test
test_logcursor
test-bjm
list-test
cachetable-test
cachetable-checkpoint-pending
block_allocator_test
ft-serialize-sub-block-test
ft-serialize-benchmark
ft-serialize-test
ft-test-cursor
ft-test-cursor-2
ft-test-header
ft-bfe-query
ybt-test
subblock-test-compression
subblock-test-checksum
subblock-test-size
subblock-test-index
test-dump-ft
test4244
test4115
test3884
test1308a
test-dirty-flushes-on-cleaner
test-flushes-on-cleaner
test-checkpoint-during-merge
test-checkpoint-during-flush
test-checkpoint-during-rebalance
test-merges-on-cleaner
test_toku_malloc_plain_free
test_block_allocator_merge
test-del-inorder
recovery-no-logdir
test-hot-with-bounds
test_oexcl
cachetable-cleaner-checkpoint
cachetable-cleaner-thread-everything-pinned
cachetable-kibbutz_and_flush_cachefile
cachetable-prefetch-close-leak-test
cachetable-clock-all-pinned
cachetable-fetch-inducing-evictor
cachetable-prefetch2-test
recovery-test5123
le-cursor-walk
test-leafentry-nested
test-leafentry-child-txn
recovery-fopen-missing-file
recovery-bad-last-entry
le-cursor-right
cachetable-clone-partial-fetch-pinned-node
quicklz-test
test-pick-child-to-flush
test-ft-overflow
test-range-del
test-range-del2
recovery-range-delete
)

add_library(tokuft_kernel_static STATIC ${tokuft_kernel_srcs})
maybe_add_gcov_to_libraries(tokuft_static_conv)
set_target_properties(tokuft_kernel_static PROPERTIES POSITION_INDEPENDENT_CODE ${STATIC_PIC})
add_dependencies(tokuft_kernel_static build_jemalloc)

